# bazel_playground

./: .gitignore  BUILD  NOTE.md  README.md  WORKSPACE  go.mod  go.sum
00_golang_hello/: BUILD  go.mod  go.sum  main.go
00_golang_hello/another/: BUILD  another_pkg.go
00_golang_hello/cmd/: BUILD
01_bazel_gazelle/: BUILD  WORKSPACE  go.mod  go.sum
01_bazel_gazelle/cmd/: BUILD
01_bazel_gazelle/cmd/cli/: BUILD  main.go
01_bazel_gazelle/internal/: BUILD  something.go
01_bazel_gazelle/pkg/hello/: BUILD  hello.go
02_bazel_go_protobufs/: BUILD  go.mod  go.sum  main.go
02_bazel_go_protobufs/internal/: something.go
02_bazel_protobufs/: README.md
02_bazel_protobufs/proto/: BUILD  example.proto
03_bazel_go_dlls/: BUILD  README.md  hello.go
03_bazel_go_starlark_dlls/: BUILD  Main.java  README.md  cc_hello.c  go_hello.go  hello.go  main.cc
03_bazel_go_starlark_dlls/bridge/: BUILD
04_bazel_java2go_starlark_dlls/: BUILD  README.md  TODO.md  go.mod  go.sum  hello.go  main.cc
04_bazel_java2go_starlark_dlls/lib/: BUILD  hello.go
04_bazel_java2go_starlark_dlls/proto/: BUILD  starlark_parsing.proto
05_go_starlark_interp/: BUILD  NOTE.md  README.md  go.mod  go.sum
05_go_starlark_interp/lib/: BUILD  fib.star  main.go  starlark.star
06_multiple_go_workspaces/project1/: BUILD.bazel  WORKSPACE  main.go
06_multiple_go_workspaces/project2/: BUILD.bazel
06_multiple_go_workspaces/project2/package/: BUILD.bazel  something.go
_TEMP/: README.md
_TEMP/cc/: BUILD
_TEMP/go/: BUILD  awesome.go
scripts/: clean.sh  gen.sh  genws.sh  goclean.sh  protos.sh
(+23 files in other folders)
