load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "package_lib",
    srcs = ["something.go"],
    importpath = "github.com/example/project2/package",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "package",
    embed = [":package_lib"],
    visibility = ["//visibility:public"],
)
